# x64dbgMCP

./: .gitignore  CMakeLists.txt  README.md
src/: MCPx32dbg.cpp  MCPx64dbg.cpp  x64dbg.py
